--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -6,11 +6,8 @@
 }
 
 body {
-  color: black;
-  background-color: white;
-  margin: 0;
-  padding: 0;
   overflow-y: hidden;
+  text-align: center;
 }
 
 body::-webkit-scrollbar {
@@ -23,12 +20,6 @@ body::-webkit-scrollbar-track {
 
 body::-webkit-scrollbar-thumb {
   background: #6649b8;
-}
-
-main {
-  margin-top: 2rem;
-  padding: 2rem;
-  overflow: hidden;
 }
 
 /* Top navigation bar */
@@ -61,31 +52,33 @@ main {
   cursor: pointer;
 }
 
-.layout {
-  width: 100vw;
-  height: calc(100vh - 3rem);
+main {
+  overflow: hidden;
+  margin-top: 4rem;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.container {
   display: grid;
-  grid-template-rows: repeat(4, 1fr);
-  grid-template-columns: repeat(4, 1fr);
-  gap: 2rem;
+  height: 85vh;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  grid-gap: 0.5rem;
 }
 
 .card {
-	display: flex;
-	flex-direction: column;
-	width: 23rem;
-  height: 25rem;
-	background-color: var(--bg-primary);
-	border-radius: 10px;
-	box-shadow: 0 10px 20px 0 rgba(#999, .25);
-	padding: 1rem;
+  background: #555;
+  border-radius: 12px;
 }
 
-.card h1 {
-  text-align: left;
-}
-
-.card img {
-  align-self: right;
+.paginator {
+  text-align: center;
+  width: 100px;
+  position: relative;
+  bottom: -1rem;
+  /* This is to ensure the text is centered on the screen. (50% - X) where X should be half of the element width */
+  left: calc(50% - 50px);
+  background:#555;
 }
 
