--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,3 +149,25 @@ nav::-webkit-scrollbar-thumb {
   margin: 20px;
   text-align: center;
 }
+
+.generate-btn {
+  width: 30rem;
+  height: 10rem;
+  font-size: 32px;
+  color: white;
+  background-color: #4CAF50;
+  padding: 0.5rem 2rem;
+  border-radius: 12px;
+  text-decoration: none;
+  cursor: pointer;
+  position: relative;
+  /* 20 rem is the width of the side bar */
+  left: calc(50% - 20rem);
+  top: 50%;
+  -ms-transform: translateY(50%);
+  transform: translateY(50%);
+}
+
+.generate-btn:hover {
+  background-color: #06652a;
+}
