--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -3,6 +3,7 @@
   font-family: 'Open Sans';
   --text-primary: #000000;
   --bg-primary: #C5C6D0;
+  margin-top: 4rem;
 }
 
 body {
@@ -10,13 +11,53 @@ body {
   background-color: white;
   margin: 0;
   padding: 0;
-  overflow-y: hidden;
 }
 
 body {
   background-color: #93CCEA;
 }
 
+#review-image {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
+}
+
 h1, h2, h3, h4, h5, p {
   text-align: center;
+}
+
+/* Top navigation bar */
+.top-nav-bar {
+  position: fixed;
+  background-color: #499bb6;
+  top: 0;
+  height: 3rem;
+  width: 100%;
+  right: 0;
+}
+
+.top-nav-bar-container {
+  position: absolute;
+  list-style: none;
+  margin: 0;
+  display: flex;
+  gap: 0.5rem;
+  top: 0.3rem;  
+  right: 0.5rem;
+  float: left;
+}
+
+.top-nav-bar-btn {
+  color: white;
+  background-color: #070255;
+  padding: 0.5rem 2rem;
+  border-radius: 12px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.top-nav-bar-btn:hover {
+  background-color: #1809eb;
 }
