--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -46,7 +46,7 @@ body::-webkit-scrollbar-thumb {
 
 .top-nav-bar-btn {
   color: white;
-  background-color: #4CAF50;
+  background-color: #070255;
   padding: 0.5rem 2rem;
   border-radius: 12px;
   text-decoration: none;
@@ -54,7 +54,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .top-nav-bar-btn:hover {
-  background-color: #06652a;
+  background-color: #1809eb;
 }
 
 main {
