--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,7 +33,7 @@ main {
 /* Top navigation bar */
 .top-nav-bar {
   position: fixed;
-  background-color: #555;
+  background-color: #499bb6;
   top: 0;
   height: 3rem;
   width: calc(100% - 20rem);
@@ -53,7 +53,7 @@ main {
 
 .top-nav-bar-btn {
   color: white;
-  background-color: #4CAF50;
+  background-color: #070255;
   padding: 0.5rem 2rem;
   border-radius: 12px;
   text-decoration: none;
@@ -61,7 +61,7 @@ main {
 }
 
 .top-nav-bar-btn:hover {
-  background-color: #06652a;
+  background-color: #1809eb;
 }
 
 /* Block for side bar */
@@ -163,9 +163,8 @@ nav::-webkit-scrollbar-thumb {
   position: relative;
   /* 20 rem is the width of the side bar */
   left: calc(50% - 20rem);
-  top: 50%;
-  -ms-transform: translateY(50%);
-  transform: translateY(50%);
+  -ms-transform: translateY(300%);
+  transform: translateY(300%);
 }
 
 .generate-btn:hover {
