--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,11 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
-
-*, *:after, *:before {
-	box-sizing: border-box;
-}
-
 body {
-	font-family: "DM Sans", sans-serif;
+	font-family: "Open Sans";
 	line-height: 1.5;
 	background-color: #f1f3fb;
 	padding: 0 2rem;
@@ -16,8 +10,6 @@ img {
 	display: block;
 }
 
-
-// iOS Reset 
 input {
 	appearance: none;
 	border-radius: 0;
@@ -36,31 +28,7 @@ input {
 }
 
 .card-image {
-	border-radius: 8px;
-	overflow: hidden;
-	padding-bottom: 65%;
-	background-image: url('https://assets.codepen.io/285131/coffee_1.jpg');
-	background-repeat: no-repeat;
-	background-size: 150%;
-	background-position: 0 5%;
-	position: relative;
-}
-
-.card-heading {
-	position: absolute;
-	left: 10%;
-	top: 15%;
-	right: 10%;
-	font-size: 1.75rem;
-	font-weight: 700;
-	color: #735400;
-	line-height: 1.222;
-	small {
-		display: block;
-		font-size: .75em;
-		font-weight: 400;
-		margin-top: .25em;
-	}
+	border-radius: 12px;
 }
 
 .card-form {
@@ -72,16 +40,6 @@ input {
 	flex-direction: column-reverse;
 	position: relative;
 	padding-top: 1.5rem;
-	&+.input {
-		margin-top: 1.5rem;
-	}
-}
-
-.input-label {
-	color: #8597a3;
-	position: absolute;
-	top: 1.5rem;
-	transition: .25s ease;
 }
 
 .input-field {
@@ -92,15 +50,11 @@ input {
 	font: inherit;
 	font-size: 1.125rem;
 	padding: .25rem 0;
-	&:focus, &:valid {
-		outline: 0;
-		border-bottom-color: #6658d3;
-		&+.input-label {
-			color: #6658d3;
-			transform: translateY(-1.5rem);
-		}
-	}
 }
+
+.input-field:focus::placeholder {
+	color: transparent;
+  }
 
 .action {
 	margin-top: 2rem;
@@ -112,23 +66,9 @@ input {
 	padding: 1em;
 	width: 100%;
 	font-weight: 500;
-	background-color: #6658d3;
+	background-color: #499bb6;
 	border-radius: 6px;
 	color: #FFF;
 	border: 0;
-	&:focus {
-		outline: 0;
-	}
-}
-
-.card-info {
-	padding: 1rem 1rem;
-	text-align: center;
-	font-size: .875rem;
-	color: #8597a3;
-	a {
-		display: block;
-		color: #6658d3;
-		text-decoration: none;
-	}
+	cursor: pointer;
 }
