added a reset button to home page

--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -20,7 +20,7 @@ body::-webkit-scrollbar-track {
 }
 
 body::-webkit-scrollbar-thumb {
-  background: #6649b8;
+  background: #05627e;
 }
 
 /* Top navigation bar */
