--- a/assets/css/recipes.css
+++ b/assets/css/recipes.css
@@ -117,10 +117,12 @@ main {
 }
 
 .food {
-  position: absolute;
+  position: relative;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -1rem;
   border-radius: 24px;
-  bottom: 3rem;
-  right: 6rem;
   width: 225px;
   cursor: pointer;
 }
