--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -65,6 +65,13 @@ main {
   background-color: #05627e;
 }
 
+.logo {
+  width: 85px;
+  height: auto;
+  float: left;
+  background-color: #070255;
+}
+
 /* Block for side bar */
 .navbar {
   position: fixed;
